# clean-news

./: .firebaserc  .gitignore  .sops.yaml  README.md  firestore.rules  memo.md
batch/: .env.sample  Makefile  README.md  pyproject.toml  set-cron.sh
batch/news_poc/: run.py  run_with_memorize.py  run_with_runnable.py  survey.md
batch/src/: clean-news-dev-firebase-adminsdk.enc.json  cleandata.py  main.py  run_scrape_and_predict.py
batch/src/app/common/: config.py  logger.py
batch/src/app/domain/: article_repo.py  articles.py  parameters.py
batch/src/app/infra/: article_repo_impl.py
batch/src/app/modules/predicts/: memory.py  predictor.py  utils.py
batch/src/app/modules/scraper/: scraper.py
clean-news-frontend/: .dev.enc.env  .gitignore  README.md  index.html  package-lock.json  package.json
clean-news-frontend/src/: App.tsx  AppErrorFallback.tsx  firebase-config.dev.enc.json  firebase.ts  vite-env.d.ts
clean-news-frontend/src/components/: NoAuthenticatedLayout.tsx  layout.tsx
clean-news-frontend/src/components/articles/: ArticleRow.tsx  FilterForm.tsx  types.ts
clean-news-frontend/src/components/common/: LoadingScreen.tsx  RequireAuth.tsx
clean-news-frontend/src/domain/: article.ts  parameters.ts  user.ts
clean-news-frontend/src/pages/: index.tsx  login.tsx
clean-news-frontend/src/repos/: articleRepo.ts  userRepo.ts
clean-news-frontend/src/stores/: appContext.ts  article.ts  user.ts
clean-news-frontend/src/swrs/: article.ts
clean-news-frontend/src/utils/: customHooks.ts  dateUtil.ts  firebase-errors.ts  logger.ts  viewUtil.ts
(+6 files in other folders)
